--- a/src/templates/screen0.html
+++ b/src/templates/screen0.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Antenatal</title>
-    {{> assets}}
+    <script src="../../bower_components/jquery-1.9.1/index.js" type="text/javascript" defer="defer"></script>
+    <link href="../../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" defer="defer"></link>
+    <script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js" type="text/javascript" defer="defer"></script>
   </head>
   <body>
     <h1 class="text-center">Create your referral</h1>
@@ -14,19 +16,19 @@
         <form id="form0" method="post">
             <div class="form-group">
                 <label for="doc_name">Name of Doctor:</label>
-                <input type="text" name="doc_name" class="form-control" value="{{doc_name}}"/>
+                <input type="text" name="doc_name" class="form-control" value=""/>
             </div>
             <div class="form-group">
                 <label for="practice_name">Practice Name:</label>
-                <input type="text" name="practice_name" class="form-control" value="{{practice_name}}"/>
+                <input type="text" name="practice_name" class="form-control" value=""/>
             </div>
             <div class="form-group">
                 <label for="referral_date">Referral Date:</label>
-                <input type="text" name="referral_date" class="form-control" value="{{referral_date}}"/>
+                <input type="text" name="referral_date" class="form-control" value=""/>
             </div>
             <div class="form-group">
                 <label for="provider_num">Provider Number:</label>
-                <input type="text" name="provider_num" class="form-control" value="{{provider_num}}"/>
+                <input type="text" name="provider_num" class="form-control" value=""/>
             </div>
             <div class="form-group">
                 <label for="preferred_care">Preferred Model of Care:</label>
@@ -57,23 +59,20 @@
                     </label>
                 </div>
             </div>
-            <button id="submit_screen0" type="submit" class="btn btn-primary pull-right">Next</button>
+            <button id="submit_screen0" type="button" onclick="pdf()" class="btn btn-primary pull-right">Next</button>
         </form>
     </div>
   </body>
   <script>
-    // document.onload = function() {
-    //     $('#submit_screen0').click(function(e) {
-    //         e.preventDefault();
-    //         console.log($('#form0').serializeArray());
-    //         console.log(JSON.stringify($('#form0').serializeArray()));
-    //         $.ajax('http://localhost:3000/page-0',
-    //         {
-    //             'data': JSON.stringify($('#form0').serializeArray()),
-    //             'processData': false,
-    //             'type': 'POST'
-    //         })
-    //     });
-    // };
+      var electron = require('electron');
+      var fs = require('fs');
+      var contents = electron.remote.getCurrentWebContents();
+
+      // save the current page to a pdf
+      var pdf = function() {
+          contents.printToPDF({}, function (err, data) {
+              fs.writeFile('screen0.pdf', data)
+          })
+      }
   </script>
 </html>
